--- a/index.html
+++ b/index.html
@@ -9,21 +9,31 @@
 <body>
     <header>
         <div class="header_left">
-            <h1>Ім'я Прізвище</h1>
+            <h1 class="black shadow white">Andrew Dowben`ko</h1>
             <div class="bio">
-                <p>Тут напиши що-небудь про себе :)</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p class="regular shadow white">
+                    FrontEnd developer (beginner)👨‍💻
+                </p>
+                <p class="regular shadow white">
+                    Criatian✝️
+                </p>
+                <p class="regular shadow white">
+                    15 y.o.👦
+                </p>
+                <p class="regular shadow white">
+                    Ukraine📍
+                </p>
             </div>
         </div>
         <div class="header_right">
             <div class="header_btn">
-                <i class="fa-solid fa-chevron-down"></i>
+                <i class="fa-solid fa-chevron-down shadow white"></i>
             </div>
         </div>
     </header>
     <main>
         <section class="skills">
-            <h1>Навички</h1>
+            <h1 class="black">Навички</h1>
             <div class="section_row">
                 <div class="section_item">
                     <img src="html_logo.png" alt="">
@@ -37,7 +47,7 @@
             </div>
         </section>
         <section class="projects">
-            <h1>Проєкти</h1>
+            <h1 class="black">Проєкти</h1>
             <div class="section_row">
                 <div class="section_item github">
                     <img src="github_logo.png" alt="">
@@ -45,7 +55,7 @@
             </div>
         </section>
         <section class="contacts">
-            <h1>Контакти</h1>
+            <h1 class="black">Контакти</h1>
             <div class="section_row">
                 <div class="section_item">
                     <img src="Instagram_icon.png.webp" alt="">
@@ -60,7 +70,7 @@
         </section>
     </main>
     <footer>
-        <div class="footer_content">
+        <div class="footer_content regular">
             Створено мною в 2024 | Logika
         </div>
     </footer>
