--- a/index.html
+++ b/index.html
@@ -25,24 +25,19 @@
                 </p>
             </div>
         </div>
-        <div class="header_right">
-            <div class="header_btn">
-                <i class="fa-solid fa-chevron-down shadow white"></i>
-            </div>
-        </div>
     </header>
     <main>
         <section class="skills">
             <h1 class="black">Навички</h1>
             <div class="section_row">
                 <div class="section_item">
-                    <img src="html_logo.png" alt="">
+                    <img src="html_logo.png" alt="html icon">
                 </div>
                 <div class="section_item">
-                    <img src="css_logo.png" alt="">
+                    <img src="css_logo.png" alt="css icon">
                 </div>
                 <div class="section_item">
-                    <img src="js_logo.png" alt="">
+                    <img src="js_logo.png" alt="js icon">
                 </div>
             </div>
         </section>
@@ -50,28 +45,14 @@
             <h1 class="black">Проєкти</h1>
             <div class="section_row">
                 <div class="section_item github">
-                    <img src="github_logo.png" alt="">
-                </div>
-            </div>
-        </section>
-        <section class="contacts">
-            <h1 class="black">Контакти</h1>
-            <div class="section_row">
-                <div class="section_item">
-                    <img src="Instagram_icon.png.webp" alt="">
-                </div>
-                <div class="section_item">
-                    <img src="tg_logo.svg" alt="">
-                </div>
-                <div class="section_item">
-                    <img src="email_logo.png" alt="">
+                    <a href="https://github.com/halle42"><img src="github_logo.png" alt="github icon"></a>
                 </div>
             </div>
         </section>
     </main>
     <footer>
         <div class="footer_content regular">
-            Створено мною в 2024 | Logika
+            Andrew Dowben`ko | Logika
         </div>
     </footer>
 </body>
