--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 </head>
 <body>
     <header>
+        <div class="running-layers-container">
+            <ul class="running-layers">
+              <li></li>
+              <li></li>
+              <li></li>
+            </ul>
+          </div>
         <div class="header_left">
             <h1 class="black shadow white">Andrew Dowben`ko</h1>
             <div class="bio">
