--- a/index.html
+++ b/index.html
@@ -50,11 +50,18 @@
         </section>
         <section class="projects">
             <h1 class="black">Проєкти</h1>
+            <img src="Frame 1приклади робіт.png" width="100%"/>
             <div class="section_row">
                 <div class="section_item github">
                     <a href="https://github.com/halle42"><img src="github_logo.png" alt="github icon"></a>
                 </div>
             </div>
+        </section>
+        <section class="bio_more_selection">
+            <h1 class="black bio_more">Трошки більше про мене</h1>
+            <p class="regular center size20">
+                Моє хоббі - це монтаж в Adobe After Effects. Також у мене є 5 домашніх тварин: 3 собаки і 2 кішки. Собак звуть Тобік, Жуля, Лакі. Котів - Люся, Ася.
+            </p>
         </section>
     </main>
     <footer>
